--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,10 @@
             "use": "@vercel/node",
             "config": {
                 "includeFiles": [
+                    "dist/**",
                     "prisma/**",
-                    "node_modules/.prisma/**"
+                    "node_modules/.prisma/**",
+                    "node_modules/@prisma/**"
                 ]
             }
         }
